# dartjieba

./: README.md  dartjieba.dart  pubspec.yaml
.dart_tool/: package_config.json
dartjieba_library/: .gitignore  CMakeLists.txt
dartjieba_library/lib/: dartjieba.cpp  dartjieba.hpp  utils.hpp
lib/: dartjieba.dart  dartjieba_library
test/: dartjieba_test.dart
